# correct-bar

./: Cargo.toml
cb-backend-wayland/: Cargo.toml
cb-backend-wayland/src/: lib.rs  main.rs
cb-bar/: Cargo.toml
cb-bar/src/: animation.rs  layout.rs  lib.rs
cb-builtin/: Cargo.toml
cb-builtin/src/: clock.rs  hwmon.rs  hypr.rs  lib.rs  proc.rs  pulse.rs
cb-common/: Cargo.toml
cb-common/src/: lib.rs
cb-core/: Cargo.toml
cb-core/src/: blit.wgsl  blitter.rs  lib.rs  quad.rs
examples/: main.rs
examples/preset/: bspwm.rs  desktop.rs  laptop.rs  mod.rs
examples/preset/modules/: alsa.rs  bspwm.rs  clock.rs  hwmon.rs  mod.rs  network.rs  proc.rs  pulse.rs  sys.rs  train.rs
src/: config.rs  lib.rs  main.rs  math.rs  module.rs
src/backend/: mod.rs  wayland.rs  x11.rs
src/bar/: color.rs  ctx.rs  math.rs  mod.rs  module.rs  window.rs
src/preset/: desktop.rs  laptop.rs  mod.rs
