[package]
name = "correct-bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
crossbeam-channel = "0.5.15"
parking_lot = "0.12.5"
rusttype = "0.9.3"

xcb = { version = "1.6.0", optional = true }
xcb-util-cursor = { version = "0.4.0", optional = true }

wayland-client = { version = "0.31.11", optional = true }
wayland-protocols = { version = "0.32.9", optional = true, features = ["client"] }

[dev-dependencies]
alsa-sys = "0.3.1"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dbus = "0.9.10"
libpulse-sys = "1.23.0"

[features]
default = ["x11", "wayland"]
x11 = ["xcb", "xcb-util-cursor"]
wayland = ["wayland-client", "wayland-protocols"]
