[package]
name = "correct-bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
cb-common = { path = "cb-common" }
cb-backend-wayland = { path = "cb-backend-wayland" }
cb-core = { path = "cb-core" }
cb-bar = { path = "cb-bar" }
wgpu = "26.0.1"

crossbeam-channel = "0.5.15"
parking_lot = "0.12.5"
rusttype = "0.9.3"

wayland-client = { version = "0.31.11", optional = true }
wayland-protocols = { version = "0.32.9", optional = true, features = ["client"] }

[dev-dependencies]
alsa-sys = "0.3.1"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dbus = "0.9.10"
libpulse-sys = "1.23.0"

peniko = "0.5"
cb-builtin = { path = "cb-builtin" }

[features]
default = ["wayland"]
wayland = ["wayland-client", "wayland-protocols"]

[workspace]
members = [
  "cb-common",
  "cb-backend-wayland",
  "cb-core",
  "cb-bar",
  "cb-builtin",
]
