[package]
name = "correct-bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cb-common = { path = "cb-common" }
cb-backend-wayland = { path = "cb-backend-wayland" }
cb-core = { path = "cb-core" }
cb-bar = { path = "cb-bar" }
cb-builtin = { path = "cb-builtin" }

wgpu = "26.0.1"
peniko = "0.5"

[workspace]
members = [
  "cb-common",
  "cb-backend-wayland",
  "cb-core",
  "cb-bar",
  "cb-builtin",
]
