[package]
name = "cb-backend-wayland"
version = "0.1.0"
edition = "2024"

[dependencies]
cb-common = { path = "../cb-common" }
libc = "0.2.178"
wayland-backend = { version = "0.3.11", features = ["client_system"] }

wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
wgpu = "26.0.1"
