[package]
name = "cb-builtin"
version = "0.1.0"
edition = "2024"

[dependencies]
cb-core = { path = "../cb-core" }
cb-bar = { path = "../cb-bar" }

kurbo = "0.12"
peniko = "0.5"

parking_lot = "0.12.5"

chrono = { version = "0.4.42", optional = true }
libpulse-sys = { version = "1.23.0", optional = true }
crossbeam-channel = { version = "0.5.15", optional = true }
serde_json = { version = "1.0.145", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
default = ["clock", "proc", "hwmon", "hypr", "pulse"]
clock = ["dep:chrono"]
proc = []
hwmon = []
hypr = ["dep:serde", "dep:serde_json"]
pulse = ["dep:libpulse-sys", "dep:crossbeam-channel"]
